# com

./: README.md  configure.ac
include/: Makefile.am  com.h  com_types.h  ipcom.h  ipcom_types.h
include/impl/mqueue/: mqueue_com.h  mqueue_com_client.h  mqueue_com_server.h  mqueue_ipcom_client.h  mqueue_ipcom_server.h
include/impl/socket/: socket_com_client.h  socket_com_server.h  socket_ipcom_client.h  socket_ipcom_server.h
src/: Makefile.am  ipcom.c
src/impl/mqueue/: mqueue_com.c  mqueue_com_client.c  mqueue_com_server.c  mqueue_ipcom_client.c  mqueue_ipcom_server.c
src/impl/socket/: socket_com_client.c  socket_com_server.c  socket_ipcom_client.c  socket_ipcom_server.c
test/: Makefile  main.c
