AUTOMAKE_OPTIONS = subdir-objects

# Header files to be installed
include_HEADERS = \
    @srcdir@/impl/mqueue/mqueue_ipcom_client.h \
    @srcdir@/impl/mqueue/mqueue_ipcom_server.h \
    @srcdir@/impl/socket/socket_ipcom_client.h \
    @srcdir@/impl/socket/socket_ipcom_server.h \
    @srcdir@/ipcom_types.h \
    @srcdir@/ipcom.h

# Header files not to be installed
# noinst_HEADERS =
