AUTOMAKE_OPTIONS = subdir-objects

# Header files to be installed
include_HEADERS = \
    @srcdir@/impl/mqueue/mqueue_com_client.h \
    @srcdir@/impl/mqueue/mqueue_com_server.h \
    @srcdir@/impl/socket/socket_com_client.h \
    @srcdir@/impl/socket/socket_com_server.h \
    @srcdir@/com_types.h \
    @srcdir@/com.h

# Header files not to be installed
# noinst_HEADERS =
